# fwupd-libsynapticsmst

./: README.md
libsynapticsmst/: Makefile.am  synapticsmst-common.c  synapticsmst-common.h  synapticsmst-device.c  synapticsmst-device.h  synapticsmst-error.c  synapticsmst-error.h  synapticsmst-tool.c  synapticsmst.h  synapticsmst.pc.in
